# callisto-admin-go-server/pkg/routes/private_routes.go
@@ -11,6 +11,8 @@ func PrivateRoutes(a *fiber.App) {
 	route := a.Group("/admin")
 
 	// Routes for POST method:
-	route.Post("/notice", controllers.CreateNotice) // create a new book
+	route.Post("/notice", controllers.CreateNotice)       // post one notice
+	route.Put("/notice", controllers.UpdateNotice)        // update one notice
+	route.Delete("/notice/:id", controllers.DeleteNotice) // delete one notice by ID
 
 }
